# ai-pr-reviewer

./: action.yml  manual.html  pyproject.toml
.github/workflows/: ci.yml  example-usage.yml
config/: default_rules.yml
scripts/: run_local.sh
src/ai_pr_reviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pr_reviewer/: __init__.py  __main__.py  commenter.py  config.py  diff_parser.py  fix_generator.py  github_client.py  issue_creator.py  main.py  models.py  reviewer.py  test_runner.py
src/pr_reviewer/prompts/: fix_generation.txt  review_file.txt  review_system.txt
tests/: conftest.py
tests/fixtures/: sample_patch.diff  sample_review_response.json
tests/unit/: test_commenter.py  test_config.py  test_diff_parser.py  test_fix_generator.py  test_issue_creator.py  test_main.py  test_models.py  test_reviewer.py  test_test_runner.py
